--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 /* Variables */
 
 #app {
-    height: 100%;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -132,6 +132,7 @@
 
 main {
     height: 100%;
+    overflow: hidden;
 
     display: flex;
     flex-direction: row;
