--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -68,7 +68,16 @@ body {
     padding: 1rem 1.5rem;
 }
 
-.dropdown .dropdown-link a {
+.dropdown .dropdown-link a, .dropdown .dropdown-link button {
+    display: block;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+
+    background-color: transparent;
+    border: none;
+    font-size: 1rem;
+
     color: var(--color-text-primary);
     text-decoration: none;
 
@@ -76,11 +85,11 @@ body {
     transition: all 0.2s;
 }
 
-.dropdown .dropdown-link a:hover {
+.dropdown .dropdown-link a:hover, .dropdown .dropdown-link button:hover {
     background-color: var(--color-bg-secundary);
 }
 
-.dropdown li a i {
+.dropdown li i {
     margin-right: 0.5rem;
 }
 
