--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -408,6 +408,10 @@ main {
 
 .file-icon {
     padding: 0 1.5rem 0 0.5rem;
+    color: var(--color-text-gray);
+}
+
+.file-icon.colored {
     color: var(--color-primary);
 }
 
