--- a/App/Views/auth/login_bulma.html
+++ b/App/Views/auth/login_bulma.html
@@ -4,23 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <script src="https://use.fontawesome.com/9ab541b969.js"></script>
+    <link rel="stylesheet" href="../../../../public/assets/css/main.css">
+    
+    <script src="https://kit.fontawesome.com/c0b2b4c2f4.js" crossorigin="anonymous"></script>
+    
 
   </head>
   <body>
     <section class="hero is-primary is-fullheight">
       <div class="hero-body">
-        <div class="container">
+        <div class="container"> 
           <div class="columns is-centered">
             <div class="column is-7-tablet is-6-desktop is-4-widescreen">
               <form action="" class="box ">
-                  <span class="icon-text is-centered is-large has-text-centered">
-                    <span class="fas fa-2x">
-                      <i class="fa fa-cloud"></i>
+                  <span class="icon-text is-flex p-6 is-justify-content-center">
+                    <span class="fas fa-2x ">
+                      <i class="fa-solid fa-cloud mr-3"></i>
                     </span>
-                    <span class="title has-text-black has-text-weight-normal">My Cloud</span>
+                    <span class="title has-text-black has-text-weight-normal is-size-2">My Cloud</span>
                   </span>
 
 
