--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -81,22 +81,22 @@
                 <aside class="column is-2 menu is-fullheight">
                     <ul class="menu-list">
                         <li>
-                            <a href="#" class="item active has-background-grey-lighter is-flex is-align-items-center">
+                            <a href="#" class="item active has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
                                 <span class="icon mr-2">
-                                    <i class="fas fa-folder"></i>
+                                    <i class="fas fa-folder is-size-5"></i>
                                 </span>
-                                <span class="name">Ficheiros</span>
-                                <span class="tag is-rounded ml-auto">1</span>
+                                <span class="name is-size-5">Ficheiros</span>
+                                <span class="tag is-white is-rounded ml-auto">1</span>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#" class="item active is-flex is-align-items-center">
-                                <span class="icon mr-2">
+                            <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2 is-size-5">
                                     <i class="fas fa-share"></i>
                                 </span>
-                                <span class="name">Partilhados</span>
-                                <span class="tag is-rounded ml-auto">1</span>
+                                <span class="name is-size-5">Partilhados</span>
+                                <span class="tag is-white is-rounded ml-auto">1</span>
                             </a>
                         </li>
 
