--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -77,7 +77,7 @@
                 </div>
             </nav>
 
-            <div class="columns is-gapless">
+            <div class="columns is-gapless is-fullheight">
                 <aside class="column is-2 menu is-fullheight">
                     <ul class="menu-list">
                         <li>
@@ -101,24 +101,24 @@
                         </li>
 
                         <li>
-                            <a href="#" class="item active is-flex is-align-items-center">
-                                <span class="icon mr-2">
+                            <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2 is-size-5">
                                     <i class="fas fa-star"></i>
                                 </span>
-                                <span class="name">Favoritos</span>
-                                <span class="tag is-rounded ml-auto">1</span>
+                                <span class="name is-size-5">Favoritos</span>
+                                <span class="tag is-white is-rounded ml-auto">1</span>
                             </a>
                         </li>
                     </ul>
 
                     <ul class="menu-list mt-auto">
                         <li>
-                            <a href="#" class=" is-flex is-align-items-center">
-                                <span class="icon mr-2">
+                            <a href="#" class=" is-flex is-align-items-center is-justify-content-space-between py-4 px-4">
+                                <span class="icon mr-2 is-size-5">
                                     <i class="fas fa-trash"></i>
                                 </span>
-                                <span class="name">Reciclagem</span>
-                                <span class="tag is-rounded ml-auto">1</span>
+                                <span class="name is-size-5">Reciclagem</span>
+                                <span class="tag is-white is-rounded ml-auto">1</span>
                             </a>
                         </li>
 
@@ -130,13 +130,13 @@
                 <div class="column">
                     <table class="table is-fullwidth">
                         <tr class="has-text-grey-light">
-                            <td><label class="checkbox"><input type="checkbox"></label></td>
+                            <td class="px-4"><label class="checkbox"><input type="checkbox"></label></td>
                             <td>Nome</td>
                             <td>Tamanho</td>
                         </tr>
 
                         <tr>
-                            <td><label class="checkbox"><input type="checkbox"></label></td>
+                            <td class="px-4"><label class="checkbox"><input type="checkbox"></label></td>
                             <td>
                                 <span class="icon-text is-flex">
                                     <span class="icon">
@@ -196,7 +196,7 @@
                         </tr>
                     </table>
 
-                    <div class="notification is-info is-light">
+                    <div class="notification is-info is-light is-flex">
                         <button class="delete"></button>
 
                         Enviando 'TODO.txt'...
