Bulma: change in files, user and profile.html

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7849,8 +7849,15 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .left-border {
   border-right: 1px solid #dbdbdb; }
 
-.notification .is-info .is-light {
+.notification {
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  max-width: 10rem; }
+  justify-content: space-between;
+  align-items: center;
+  align-self: flex-end;
+  max-width: 17rem;
+  max-height: 3rem; }
+
+.image_text {
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
