--- a/App/Views/dashboard/admin/users.html
+++ b/App/Views/dashboard/admin/users.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="../../../../public/assets/css/main.css">
 
@@ -15,166 +14,221 @@
 
 <body>
 
-<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
-    <h1 class="pl-5">
-                    <span class="icon-text is-large">
-                        <span class="icon">
+    <div class="columns is-6-desktop is-fullheight">
+        <div class="column">
+            <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+                <div class="navbar-brand">
+                    <a class="navbar-item" href="https://bulma.io">
+                        <span class="icon mr-2">
                             <i class="fa fa-cloud"></i>
                         </span>
+
                         <span>My Cloud</span>
-                    </span>
-    </h1>
-    <div id="navbar" class="navbar-menu">
-        <div class="navbar-end">
+                    </a>
 
-        </div>
-    </div>
-</nav>
-
-<div class="columns is-gapless">
-    <aside class="column is-2 menu is-fullheight left-border">
-        <ul class="menu-list">
-            <p class="menu-label ml-4 mt-4">
-                Utilizador
-            </p>
-            <li>
-                <a href="#" class="is-flex is-align-items-center">
-                            <span class="icon mr-2">
-                                <i class="fas fa-user"></i>
-                            </span>
-                    <span class="name">Perfil</span>
-                </a>
-            </li>
-
-
-            <li>
-                <a href="#" class=" is-flex is-align-items-center">
-                            <span class="icon mr-2">
-                                <i class="fas fa-chart-pie"></i>
-                            </span>
-                    <span class="name">Estatísticas</span>
-                </a>
-            </li>
-        </ul>
-        <p class="menu-label ml-4 mt-4">
-            Administrador
-        </p>
-        <ul class="menu-list">
-            <li>
-                <a href="#" class="has-background-grey-lighter is-flex is-align-items-center">
-                            <span class="icon mr-2">
-                                <i class="fas fa-users"></i>
-                            </span>
-                    <span class="name">Utilizadores</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" class=" is-flex is-align-items-center">
-                            <span class="icon mr-2">
-                                <i class="fas fa-chart-pie"></i>
-                            </span>
-                    <span class="name">Estatísticas</span>
-                </a>
-            </li>
-        </ul>
-    </aside>
-
-    <div class="column">
-        <table class="table is-fullwidth">
-            <tr class="has-text-grey-light">
-                <td>Username</td>
-                <td>Nome Completo</td>
-                <td>Ações</td>
-            </tr>
-
-            <tr>
-                <td>
-                    <span class="icon-text">
-                        <!--<figure class="image is-128x128">
-                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                        </figure>-->
-
-                        ricardofalcao
-                    </span>
-                </td>
-
-                <td>
-                    Ricardo Falcão
-                </td>
-
-                <td>
-                    <span class="icon">
-                        <i class="fas fa-trash"></i>
-                    </span>
-                </td>
-            </tr>
-        </table>
-
-        <div>
-            <span class="icon">
-                <i class="fas fa-circle-plus"></i>
-            </span>
-        </div>
-
-
-        <div class="container is-fluid">
-            <form>
-                <h1 class="is-size-4 has-text-weight-bold mb-4">Adicionar utilizador</h1>
-                <div class="field is-horizontal">
-                    <div class="field-body">
-                        <div class="field">
-                            <label for="" class="label">Username</label>
-                            <p class="control has-icons-left is-expanded">
-                                <input type="email" placeholder="e.g. Notorious B.I.G." class="input" required>
-                                <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
-                            </p>
+                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                        data-target="navbarBasicExample">
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                    </a>
+                </div>
+                <div id="navbar" class="navbar-menu">
+                    <div class="navbar-end">
+                        <div class="navbar-item">
+                            <div class="field">
+                                <p class="control has-icons-left">
+                                    <input class="input is-rounded" type="text" placeholder="Search">
+                                    <span class="icon is-small is-left">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </p>
+                            </div>
                         </div>
 
-                        <div class="field">
-                            <label for="" class="label">Nome completo</label>
-                            <p class="control has-icons-left is-expanded">
-                                <input type="password" placeholder="e.g. Adelino Passas" class="input" required>
-                                <span class="icon is-small is-left">
-                            <i class="fa fa-address-book"></i>
+                        <div class="navbar-item has-dropdown is-hoverable">
+                            <div class="navbar-link">
+                                User
+                            </div>
+
+                            <div id="moreDropdown" class="navbar-dropdown is-right">
+                                <a class="navbar-item " href="http://bulma.io/extensions/">
+                                    <div class="level is-mobile">
+                                        <div class="level-left">
+                                            <div class="level-item">
+                                                <p>
+                                                    <strong>Extensions</strong>
+                                                    <br>
+                                                    <small>Side projects to enhance Bulma</small>
+                                                </p>
+                                            </div>
+                                        </div>
+
+                                        <div class="level-right">
+                                            <div class="level-item">
+                                                <span class="icon has-text-info">
+                                                    <i class="fa fa-plug"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="columns is-gapless">
+                <aside class="column is-2 menu is-fullheight left-border">
+                    <ul class="menu-list">
+                        <p class="menu-label ml-4 mt-4" style="font-size: 15px;">
+                            Utilizador
+                        </p>
+                        <li>
+                            <a href="#" class="is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2">
+                                    <i class="fas fa-user is-size-5"></i>
+                                </span>
+                                <span class="name is-size-5">Perfil</span>
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="#" class=" is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2">
+                                    <i class="fas fa-chart-pie is-size-5"></i>
+                                </span>
+                                <span class="name is-size-5">Estatísticas</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="menu-label ml-4 mt-4" style="font-size: 15px;">
+                        Administrador
+                    </p>
+                    <ul class="menu-list">
+                        <li>
+                            <a href="#" class="has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2">
+                                    <i class="fas fa-users is-size-5"></i>
+                                </span>
+                                <span class="name is-size-5">Utilizadores</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class=" is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2">
+                                    <i class="fas fa-chart-pie is-size-5"></i>
+                                </span>
+                                <span class="name is-size-5">Estatísticas</span>
+                            </a>
+                        </li>
+                    </ul>
+                </aside>
+
+                <div class="column">
+                    <table class="table is-fullwidth">
+                        <tr class="has-text-grey-light">
+                            <td></td>
+                            <td>Username</td>
+                            <td>Nome Completo</td>
+                            <td>Ações</td>
+                        </tr>
+
+                        <tr>
+                            <td class="image_text">
+                                <figure class="image is-48x48">
+                                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                                </figure>
+                            </td>
+                            <td>
+                                ricardofalcao
+                            </td>
+                            <td>
+                                Ricardo Falcão
+                            </td>
+
+                            <td>
+                                <button class="button is-small is-black is-inverted">
+                                    <span class="icon">
+                                        <i class="fas fa-trash"></i>
+                                    </span>
+                                </button>
+                                
+                            </td>
+                        </tr>
+                    </table>
+
+                    <div>
+                        <span class="icon">
+                            <i class="fas fa-circle-plus"></i>
                         </span>
-                            </p>
+                    </div>
+
+
+                    <div class="column is-three-fifths">
+                        <div class="container is-fluid p-0 mx-3">
+                            <form>
+                                <h1 class="is-size-4 has-text-weight-bold mb-4">Adicionar utilizador</h1>
+                                <div class="field is-horizontal">
+                                    <div class="field-body">
+                                        <div class="field">
+                                            <label for="" class="label">Username</label>
+                                            <p class="control has-icons-left is-expanded">
+                                                <input type="email" placeholder="e.g. Notorious B.I.G." class="input"
+                                                    required>
+                                                <span class="icon is-small is-left"><i class="fa fa-user"></i></span>
+                                            </p>
+                                        </div>
+    
+                                        <div class="field">
+                                            <label for="" class="label">Nome completo</label>
+                                            <p class="control has-icons-left is-expanded">
+                                                <input type="password" placeholder="e.g. Adelino Passas" class="input"
+                                                    required>
+                                                <span class="icon is-small is-left">
+                                                    <i class="fa fa-address-book"></i>
+                                                </span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="field is-horizontal">
+                                    <div class="field-body">
+    
+                                        <div class="field">
+                                            <label for="" class="label">Password</label>
+                                            <div class="control has-icons-left">
+                                                <input type="password" placeholder="*******" class="input" required>
+                                                <span class="icon is-small is-left">
+                                                    <i class="fa fa-lock"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+    
+                                        <div class="field">
+                                            <label for="" class="label">Confirmar Password</label>
+                                            <div class="control has-icons-left">
+                                                <input type="password" placeholder="*******" class="input" required>
+                                                <span class="icon is-small is-left">
+                                                    <i class="fa fa-lock"></i>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+    
+                                <div class="field">
+                                    <button class="button is-primary">
+                                        Submeter
+                                    </button>
+                                </div>
+                            </form>
                         </div>
                     </div>
+                    
                 </div>
-                <div class="field is-horizontal">
-                    <div class="field-body">
-
-                        <div class="field">
-                            <label for="" class="label">Password</label>
-                            <div class="control has-icons-left">
-                                <input type="password" placeholder="*******" class="input" required>
-                                <span class="icon is-small is-left">
-                                <i class="fa fa-lock"></i>
-                            </span>
-                            </div>
-                        </div>
-
-                        <div class="field">
-                            <label for="" class="label">Confirmar Password</label>
-                            <div class="control has-icons-left">
-                                <input type="password" placeholder="*******" class="input" required>
-                                <span class="icon is-small is-left">
-                                <i class="fa fa-lock"></i>
-                            </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <button class="button is-primary">
-                        Submeter
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+            </div>
 </body>
 
 </html>
