--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>files</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="../../../../public/assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
 
 </head>
 
 <body>
-    <div class="columns is-6-desktop">
+    <div class="columns is-6-desktop is-fullheight">
         <div class="column">
             <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
@@ -77,8 +77,9 @@
                 </div>
             </nav>
 
+            <section class="hero is-fullheighth"></section>
             <div class="columns is-gapless is-fullheight">
-                <aside class="column is-2 menu is-fullheight">
+                <aside class="column is-2 menu ">
                     <ul class="menu-list">
                         <li>
                             <a href="#" class="item active has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
@@ -130,13 +131,13 @@
                 <div class="column">
                     <table class="table is-fullwidth">
                         <tr class="has-text-grey-light">
-                            <td class="px-4"><label class="checkbox"><input type="checkbox"></label></td>
+                            <td><label class="checkbox"><input type="checkbox"></label></td>
                             <td>Nome</td>
                             <td>Tamanho</td>
                         </tr>
 
                         <tr>
-                            <td class="px-4"><label class="checkbox"><input type="checkbox"></label></td>
+                            <td><label class="checkbox"><input type="checkbox"></label></td>
                             <td>
                                 <span class="icon-text is-flex">
                                     <span class="icon">
@@ -196,7 +197,7 @@
                         </tr>
                     </table>
 
-                    <div class="notification is-info is-light is-flex">
+                    <div class="notification is-info is-light">
                         <button class="delete"></button>
 
                         Enviando 'TODO.txt'...
