--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -12,10 +12,23 @@ $menu-list-link-padding: 0.875em 1.25em;
   border-right: 1px solid $border;
 }
 
-.notification .is-info .is-light{
+.notification {
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+
+  justify-content: space-between;
+  align-items: center;
+  align-self: flex-end;
+
   
-  max-width: 10rem;
+  max-width: 17rem;
+  max-height: 3rem;
+
 }
+
+.image_text{
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+}
+
